--- a/new_method/index.html
+++ b/new_method/index.html
@@ -9,7 +9,12 @@
 
 <body>
     <div id="root"></div>
+
+    <script src="Footer.js" type="text/babel"></script>
+    <script src="Header.js" type="text/babel"></script>
+    <script src="Page.js" type="text/babel"></script>
     <script src="index.js" type="text/babel"></script>
+
 </body>
 
 </html>
